--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "cloudinary": "^2.0.3",
     "clsx": "^2.1.0",
     "mongoose": "^8.2.0",
     "next": "14.1.1",
