--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@heroicons/react": "^2.1.1",
     "cloudinary": "^2.0.3",
     "clsx": "^2.1.0",
+    "maplibre-gl": "^4.1.1",
     "mongoose": "^8.2.0",
     "next": "14.1.1",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-map-gl": "^7.1.7",
     "tailwind-merge": "^2.2.1",
     "zod": "^3.22.4"
   },
