--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.1.1",
+    "@maptiler/client": "^1.8.1",
     "cloudinary": "^2.0.3",
     "clsx": "^2.1.0",
     "maplibre-gl": "^4.1.1",
