--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@maptiler/client": "^1.8.1",
     "cloudinary": "^2.0.3",
     "clsx": "^2.1.0",
+    "framer-motion": "^11.0.23",
     "maplibre-gl": "^4.1.1",
     "mongoose": "^8.2.0",
     "next": "14.1.1",
